# freedom

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.test.yml  pyproject.toml  requirements.txt
docs/: development-plan.md  iteration1_acceptance_report.md  iteration1_acceptance_review_record.md  iteration1_review_package.md
docs/architecture/: 1-overall-architecture.md  2-subsystem-design.md  3-database-architecture.md  4-interface-specification.md  5-deployment-architecture.md  6-security-architecture.md  README.md
docs/deployment/: deployment-guide.md  operations-guide.md
docs/detailed-design/: README.md  review-agenda.md  review-checklist.md
docs/regulations/: a-share-rules.md
docs/requirements/: stakeholder-analysis.md  use-cases.md
docs/srs/: README.md  section1-introduction.md  section2-overall-description.md  section3-specific-requirements.md
docs/validation/: Q004-backtest-benchmark-plan.md  Q004-backtest-performance-assessment.md  Q005-storage-benchmark-plan.md  Q005-storage-performance-assessment.md  README.md  approval-conditions-verification-report-20260314.md  approval-decision-meeting-agenda-20260314.md  approval-decision-meeting-minutes-20260314.md  architecture-correction-completion-report.md  architecture-review-agenda-20260322.md  architecture-review-checklist.md  architecture-review-conclusion.md  (+75 more)
scripts/: init_clickhouse.sql  init_postgres.sql  start_databases.sh  start_test_env.sh  stop_databases.sh  sync_stock_basic.py
tests/: conftest.py  pytest.ini  test_config.py
(+368 files in other folders)
