[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "1.2.0"
authors = [
  { name="Quant Team", email="quant@example.com" }
]
description = "A股量化交易系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.3",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
  '^\.venv/',
  '^\.mypy_cache/',
  '^tests/',
]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term --cov-report=html:htmlcov"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/__init__.py",
  "*/config/*",
  "*/migrations/*",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [
  ".git",
  "__pycache__",
  "*.pyc",
  "build",
  "dist",
  "*.egg-info",
]
